# ai-agent

./: pyproject.toml
ai_agent_scratchpad/: agents.py  conversation.py  functions.py  functions_static.py  main.ipynb  scratchpad.py  tool_schema.py  tool_schema_static.py  utils.py
